tests/NormalTests/paczka1/fuzzy1/48196045.err
Error in line 2: 4GC2KO0 S360 8,7
Error in line 3: 4GC2KO0 A578 39,9
Error in line 5: A529 A812 7,5
Error in line 6: A529 A578 45,4
Error in line 19: T4xO9KCYMQ A529 44,6
Error in line 28: T4xO9KCYMQ S360 71,5
Error in line 22: YCtO73RHQe7 S360 64,6
Error in line 30: T4xO9KCYMQ A812 51,4
